res/examples/invalid/const_decl_empty_list_to_unknown_list.eg
const a: list<unknown> = [];

// out: TypeError: list declared with an unknown type e.g. let a = []; // list<unknown>